--- a/index.html
+++ b/index.html
@@ -4,7 +4,72 @@
 		<meta charset="utf-8">
 		<title>HW5</title>
 		<style>
+			/* Overall container */
+			.hud-container {
+    			position: absolute;
+    			top: 20px; right: 20px;
+    			display: grid;
+    			grid-template-columns: 1fr;
+    			gap: 12px;
+    			background: rgba(0,0,0,0.7);
+    			padding: 16px;
+    			border-radius: 8px;
+    			color: #fff;
+    			font-family: 'Arial', sans-serif;
+    			font-size: 14px;
+    			line-height: 1.4;
+    			pointer-events: none; 
+  			}
+
+  			/* Panels inside the HUD */
+  			.hud-panel {
+    			pointer-events: auto; 
+  			}
+
+  			/* Progress bar wrapper */
+  			.progress-bar {
+    			width: 180px; height: 14px;
+    			background: #333;
+    			border: 2px solid #555;
+    			border-radius: 4px;
+    			overflow: hidden;
+  			}
+  			.progress-fill {
+    			height: 100%;
+    			width: 50%;
+    			background: #0f0;
+    			transition: width 0.2s ease;
+  			}
+
+  			/* Instructions list */
+  			.instructions ul {
+    			list-style: none;
+    			margin: 0; padding: 0;
+  			}
+  			.instructions li {
+   				margin-bottom: 4px;
+  			}
+
+  			/* Button and select styling */
+  			.hud-panel button,
+			.hud-panel select {
+    			background: #222;
+    			color: #fff;
+    			border: 1px solid #555;
+    			border-radius: 4px;
+    			padding: 4px 8px;
+    			font-size: 14px;
+    			cursor: pointer;
+  			}
+			@media (max-width: 600px) {
+  				.hud-container {
+    				top: auto; bottom: 10px; left: 10px; right: 10px;
+    				grid-template-columns: repeat(2, 1fr);
+  				}
+  			.instructions { grid-column: 1 / -1; }
+			}
 		</style>
+
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js'></script>
 	</head>
 	<body>
